--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   pdf: ^3.10.1
   path_provider: ^2.0.14
   intl: ^0.18.1
+  printing: ^5.10.3
+  rflutter_alert: ^2.0.4
 
 dev_dependencies:
   flutter_test:
